Added identifier reading, with planning for whitespace